==> vdm-dev/stm32playground/Projects_F407/Rfid522/rfid.c <==
#include "rfid.h"
#include <string.h>
#include <stm32f4xx_rcc.h>
#include <stm32f4xx_gpio.h>
#include <stm32f4xx_spi.h>
#define MFRC522_MaxPICCs (sizeof(_TypeNamePICC)/sizeof(_TypeNamePICC[0]))
#define MFRC522_MaxError (sizeof(_ErrorMessage)/sizeof(_ErrorMessage[0]))

void PCD_WriteRegister(uint8_t reg, uint8_t value)
{
    GPIO_ResetBits(RFID_NSS_GPIO_PORT, RFID_NSS_PIN);
    
    PCD_WriteAndReadSPI(reg & 0x7E);
    PCD_WriteAndReadSPI(value);

    GPIO_SetBits(RFID_NSS_GPIO_PORT, RFID_NSS_PIN);
}

uint8_t PCD_ReadRegister(uint8_t reg)
{
    GPIO_ResetBits(RFID_NSS_GPIO_PORT, RFID_NSS_PIN);
    
    PCD_WriteAndReadSPI(reg | 0x80);
    
    uint8_t result = PCD_WriteAndReadSPI(0);

    GPIO_SetBits(RFID_NSS_GPIO_PORT, RFID_NSS_PIN);
    
    return result;
}

uint8_t PCD_CalculateCRC(uint8_t *data, uint8_t length, uint8_t *result)
{
    PCD_WriteRegister(CommandReg, PCD_Idle);      // Stop any active command.
    PCD_WriteRegister(DivIrqReg, 0x04);           // Clear the CRCIRq interrupt request bit
    PCD_SetRegisterBits(FIFOLevelReg, 0x80);      // FlushBuffer = 1, FIFO initialization
    PCD_WriteBuffer(FIFODataReg, length, data);   // Write data to the FIFO
    PCD_WriteRegister(CommandReg, PCD_CalcCRC);   // Start the calculation

    // Wait for the CRC calculation to complete. Each iteration of the while-loop takes 17.73us.
    uint16_t i = 5000;
    uint8_t n;
    
    while (1)
    {
        n = PCD_ReadRegister(DivIrqReg);  // DivIrqReg[7..0] bits are: Set2 reserved reserved MfinActIRq   reserved CRCIRq reserved reserved

        if (n & 0x04)
        {
            // CRCIRq bit set - calculation done
            break;
        }

        if (--i == 0)
        {
            // The emergency break. We will eventually terminate on this one after 89ms.
            // Communication with the MFRC522 might be down.
            return STATUS_TIMEOUT;
        }
    }

    // Stop calculating CRC for new content in the FIFO.
    PCD_WriteRegister(CommandReg, PCD_Idle);

    // Transfer the result from the registers to the result buffer
    result[0] = PCD_ReadRegister(CRCResultRegL);
    result[1] = PCD_ReadRegister(CRCResultRegH);

    return STATUS_OK;
}

uint8_t PCD_CommunicateWithPICC(uint8_t command,
                                uint8_t waitIRq,
                                uint8_t *sendData,
                                uint8_t sendLen,
                                uint8_t *backData,
                                uint8_t *backLen,
                                uint8_t *validBits,
                                uint8_t rxAlign,
                                uint8_t checkCRC)
{
    uint8_t n, _validBits = 0;
    uint32_t i;

    // Prepare values for BitFramingReg
    uint8_t txLastBits = validBits ? *validBits : 0;
    uint8_t bitFraming = (rxAlign << 4) + txLastBits;   // RxAlign = BitFramingReg[6..4]. TxLastBits = BitFramingReg[2..0]

    PCD_WriteRegister(CommandReg, PCD_Idle);            // Stop any active command.
    PCD_WriteRegister(ComIrqReg, 0x7F);                 // Clear all seven interrupt request bits
    PCD_SetRegisterBits(FIFOLevelReg, 0x80);            // FlushBuffer = 1, FIFO initialization
    PCD_WriteBuffer(FIFODataReg, sendLen, sendData);    // Write sendData to the FIFO
    PCD_WriteRegister(BitFramingReg, bitFraming);       // Bit adjustments
    PCD_WriteRegister(CommandReg, command);             // Execute the command

    if (command == PCD_Transceive)
        PCD_SetRegisterBits(BitFramingReg, 0x80);       // StartSend=1, transmission of data starts

    // Wait for the command to complete.
    // In PCD_Init() we set the TAuto flag in TModeReg. This means the timer automatically starts when the PCD stops transmitting.
    // Each iteration of the do-while-loop takes 17.86us.
    i = 2000;
    while (1)
    {
        n = PCD_ReadRegister(ComIrqReg);  // ComIrqReg[7..0] bits are: Set1 TxIRq RxIRq IdleIRq   HiAlertIRq LoAlertIRq ErrIRq TimerIRq

        if (n & waitIRq)
        {          // One of the interrupts that signal success has been set.
            break;
        }

        if (n & 0x01)
        {           // Timer interrupt - nothing received in 25ms
            return STATUS_TIMEOUT;
        }

        if (--i == 0)
        {           // The emergency break. If all other condions fail we will eventually terminate on this one after 35.7ms. Communication with the MFRC522 might be down.
            return STATUS_TIMEOUT;
        }
    }

    // Stop now if any errors except collisions were detected.
    uint8_t errorRegValue = PCD_ReadRegister(ErrorReg); // ErrorReg[7..0] bits are: WrErr TempErr reserved BufferOvfl   CollErr CRCErr ParityErr ProtocolErr
    
    if (errorRegValue & 0x13)
    {  // BufferOvfl ParityErr ProtocolErr
        return STATUS_ERROR;
    }

    // If the caller wants data back, get it from the MFRC522.
    if (backData && backLen)
    {
        n = PCD_ReadRegister(FIFOLevelReg);           // Number of bytes in the FIFO
        
        if (n > *backLen)
        {
            return STATUS_NO_ROOM;
        }

        *backLen = n;                       // Number of bytes returned
        
        PCD_ReadBuffer(FIFODataReg, n, backData, rxAlign);    // Get received data from FIFO
        
        _validBits = PCD_ReadRegister(ControlReg) & 0x07; // RxLastBits[2:0] indicates the number of valid bits in the last received byte. If this value is 000b, the whole byte is valid.
        
        if (validBits)
        {
            *validBits = _validBits;
        }
    }

    // Tell about collisions
    if (errorRegValue & 0x08)
    { // CollErr
        return STATUS_COLLISION;
    }

    // Perform CRC_A validation if requested.
    if (backData && backLen && checkCRC)
    {
        // In this case a MIFARE Classic NAK is not OK.
        if ((*backLen == 1) && (_validBits == 4))
        {
            return STATUS_MIFARE_NACK;
        }

        // We need at least the CRC_A value and all 8 bits of the last byte must be received.
        if ((*backLen < 2) || (_validBits != 0))
        {
            return STATUS_CRC_WRONG;
        }

        // Verify CRC_A - do our own calculation and store the control in controlBuffer.
        uint8_t controlBuffer[2];
        
        n = PCD_CalculateCRC(&backData[0], *backLen - 2, &controlBuffer[0]);
        
        if (n != STATUS_OK)
        {
            return n;
        }

        if ((backData[*backLen - 2] != controlBuffer[0]) || (backData[*backLen - 1] != controlBuffer[1]))
        {
            return STATUS_CRC_WRONG;
        }
    }

    return STATUS_OK;
}

char* PICC_GetTypeName(uint8_t piccType)
{
    if(piccType == PICC_TYPE_NOT_COMPLETE)
    {
        piccType = MFRC522_MaxPICCs - 1;
    }

    return((char *) _TypeNamePICC[piccType]);
}
