==> ogneyar/MIK32_RFID/RFID.c <==
#include "RFID.h"
#include <stddef.h>
#include <stdbool.h>

void PCD_WriteRegister(ePCD_Register_t reg, byte value ) 
{
	digitalWrite(_chipSelectPort, _chipSelectPin, LOW);		// Select slave
	SPI_SendData(reg);
	SPI_SendData(value);
	digitalWrite(_chipSelectPort, _chipSelectPin, HIGH);		// Release slave again
}

byte PCD_ReadRegister(ePCD_Register_t reg	)
{
	byte value;
	digitalWrite(_chipSelectPort, _chipSelectPin, LOW);			// Select slave
	SPI_SendData(0x80 | reg);
	value = SPI_ReceiveData();
	digitalWrite(_chipSelectPort, _chipSelectPin, HIGH);			// Release slave again
	return value;
}

eStatusCode_t PCD_CalculateCRC(byte *data, byte length, byte *result) {
	PCD_WriteRegister(CommandReg, PCD_Idle);		// Stop any active command.
	PCD_WriteRegister(DivIrqReg, 0x04);				// Clear the CRCIRq interrupt request bit
	PCD_WriteRegister(FIFOLevelReg, 0x80);			// FlushBuffer = 1, FIFO initialization
	PCD_WriteRegister_Array(FIFODataReg, length, data);	// Write data to the FIFO
	PCD_WriteRegister(CommandReg, PCD_CalcCRC);		// Start the calculation
	
    // HAL_SCR1_Timer_Start(&hscr1_timer, 89);
	uint32_t millis = HAL_Time_SCR1TIM_Millis();
	bool completed = false;

	do {
		byte n = PCD_ReadRegister(DivIrqReg);
		if (n & 0x04) {									// CRCIRq bit set - calculation done
			PCD_WriteRegister(CommandReg, PCD_Idle);	// Stop calculating CRC for new content in the FIFO.
			result[0] = PCD_ReadRegister(CRCResultRegL);
			result[1] = PCD_ReadRegister(CRCResultRegH);
			completed = true;
			break;
		}
	}
	while ( ( HAL_Time_SCR1TIM_Millis() - millis ) < 89);
	// while (HAL_SCR1_Timer_GetFlagCMP(&hscr1_timer) == 0);

    // HAL_SCR1_Timer_Disable(&hscr1_timer);

	if (completed)
		return STATUS_OK;

	return STATUS_TIMEOUT;
}

eStatusCode_t PCD_CommunicateWithPICC(byte command,		///< The command to execute. One of the PCD_Command enums.
									  byte waitIRq,		///< The bits in the ComIrqReg register that signals successful completion of the command.
									  byte *sendData,		///< Pointer to the data to transfer to the FIFO.
									  byte sendLen,		///< Number of bytes to transfer to the FIFO.
									  byte *backData,		///< nullptr or pointer to buffer if data should be read back after executing the command.
									  byte *backLen,		///< In: Max number of bytes to write to *backData. Out: The number of bytes returned.
									  byte *validBits,	///< In/Out: The number of valid bits in the last byte. 0 for 8 valid bits.
									  byte rxAlign,		///< In: Defines the bit position in backData[0] for the first bit received. Default 0.
									  byte checkCRC		///< In: True => The last two bytes of the response is assumed to be a CRC_A that must be validated.
) {
	byte txLastBits = validBits ? *validBits : 0;
	byte bitFraming = (rxAlign << 4) + txLastBits;		// RxAlign = BitFramingReg[6..4]. TxLastBits = BitFramingReg[2..0]
	
	PCD_WriteRegister(CommandReg, PCD_Idle);			// Stop any active command.
	PCD_WriteRegister(ComIrqReg, 0x7F);					// Clear all seven interrupt request bits
	PCD_WriteRegister(FIFOLevelReg, 0x80);				// FlushBuffer = 1, FIFO initialization

	PCD_WriteRegister_Array(FIFODataReg, sendLen, sendData);	// Write sendData to the FIFO

	PCD_WriteRegister(BitFramingReg, bitFraming);		// Bit adjustments
	PCD_WriteRegister(CommandReg, command);				// Execute the command
	if (command == PCD_Transceive) {
		PCD_SetRegisterBitMask(BitFramingReg, 0x80);	// StartSend=1, transmission of data starts
	}	

    // HAL_SCR1_Timer_Start(&hscr1_timer, 36);
	uint32_t millis = HAL_Time_SCR1TIM_Millis();
	bool completed = false;

	do {
		byte n = PCD_ReadRegister(ComIrqReg);	// ComIrqReg[7..0] bits are: Set1 TxIRq RxIRq IdleIRq HiAlertIRq LoAlertIRq ErrIRq TimerIRq
		if (n & waitIRq) {					// One of the interrupts that signal success has been set.
			completed = true;
			break;
		}
		if (n & 0x01) {						// Timer interrupt - nothing received in 25ms
			break;
		}
	}
	while ( ( HAL_Time_SCR1TIM_Millis() - millis ) < 36);
	// while (HAL_SCR1_Timer_GetFlagCMP(&hscr1_timer) == 0);

    // HAL_SCR1_Timer_Disable(&hscr1_timer);

	if (!completed) {
		return STATUS_TIMEOUT;
	}
	
	byte errorRegValue = PCD_ReadRegister(ErrorReg); // ErrorReg[7..0] bits are: WrErr TempErr reserved BufferOvfl CollErr CRCErr ParityErr ProtocolErr
	if (errorRegValue & 0x13) {	 // BufferOvfl ParityErr ProtocolErr
		return STATUS_ERROR;
	}
  
	byte _validBits = 0;
	
	if (backData && backLen) {
		byte n = PCD_ReadRegister(FIFOLevelReg);	// Number of bytes in the FIFO
		if (n > *backLen) {
			return STATUS_NO_ROOM;
		}
		*backLen = n;											// Number of bytes returned
		PCD_ReadRegister_Array(FIFODataReg, n, backData, rxAlign);	// Get received data from FIFO
		_validBits = PCD_ReadRegister(ControlReg) & 0x07;		// RxLastBits[2:0] indicates the number of valid bits in the last received byte. If this value is 000b, the whole byte is valid.
		if (validBits) {
			*validBits = _validBits;
		}
	}
	
	if (errorRegValue & 0x08) {		// CollErr
		return STATUS_COLLISION;
	}
	
	if (backData && backLen && checkCRC) {
		if (*backLen == 1 && _validBits == 4) {
			return STATUS_MIFARE_NACK;
		}
		if (*backLen < 2 || _validBits != 0) {
			return STATUS_CRC_WRONG;
		}
		byte controlBuffer[2];
		eStatusCode_t status = PCD_CalculateCRC(&backData[0], *backLen - 2, &controlBuffer[0]);
		if (status != STATUS_OK) {
			return status;
		}
		if ((backData[*backLen - 2] != controlBuffer[0]) || (backData[*backLen - 1] != controlBuffer[1])) {
			return STATUS_CRC_WRONG;
		}
	}

	return STATUS_OK;
}

const char * PICC_GetTypeName(ePICC_Type_t piccType)
{
	switch (piccType) {
		case PICC_TYPE_ISO_14443_4:		return "PICC compliant with ISO/IEC 14443-4";
		case PICC_TYPE_ISO_18092:		return "PICC compliant with ISO/IEC 18092 (NFC)";
		case PICC_TYPE_MIFARE_MINI:		return "MIFARE Mini, 320 bytes";
		case PICC_TYPE_MIFARE_1K:		return "MIFARE 1KB";
		case PICC_TYPE_MIFARE_4K:		return "MIFARE 4KB";
		case PICC_TYPE_MIFARE_UL:		return "MIFARE Ultralight or Ultralight C";
		case PICC_TYPE_MIFARE_PLUS:		return "MIFARE Plus";
		case PICC_TYPE_MIFARE_DESFIRE:	return "MIFARE DESFire";
		case PICC_TYPE_TNP3XXX:			return "MIFARE TNP3XXX";
		case PICC_TYPE_NOT_COMPLETE:	return "SAK indicates UID is not complete.";
		case PICC_TYPE_UNKNOWN:
		default:						return "Unknown type";
	}
}
